# silas

./: .codexignore  .gitignore  .tmp_aiosqlite.py  .tmp_debug.py  .venv  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  ROADMAP.md  SECURITY.md  STATUS.md  pyproject.toml  pyrightconfig.json  specs.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
codex-tasks/: batch-plan.md
config/: silas.yaml  silas.yaml.example
data/: .signing.salt
docs/: QUEUE_WORK_SPEC.md  RELEASE_CHECKLIST.md
reports/: gap-review-2026-02-13-v2.md  gap-review-2026-02-13.md  spec-compliance-audit-2026-02-12.md
research/: ai-frontend-design.md
silas/: config.py  main.py  manual_harness.py  secrets.py  stubs.py
silas/agents/: README.md  __init__.py  executor_agent.py  planner.py  proxy.py  scorer.py  structured.py
silas/approval/: README.md  __init__.py  fatigue.py  manager.py  review_queue.py  verifier.py
silas/audit/: sqlite_audit.py
silas/benchmarks/: __init__.py  conftest.py  runner.py  scorer.py  solver.py
silas/channels/: README.md  __init__.py  base.py  cli.py  telegram.py  web.py
silas/connections/: README.md  __init__.py  lifecycle.py  manager.py  skill_adapter.py
silas/context/: __init__.py  consolidator.py  manager.py  registry.py  scorer.py  sqlite_store.py  subscriptions.py  turn_context.py
silas/core/: README.md  __init__.py  approval_flow.py  context_manager.py  context_registry.py  event_router.py  goal_manager.py  interaction_mode.py  key_manager.py  logging.py  loki_handler.py  manifest_signer.py  metrics.py  plan_executor.py  plan_parser.py  prompt_manager.py  skill_sandbox.py  stream.py  subscriptions.py  telemetry.py  token_counter.py  topic_manager.py  turn_context.py  undo.py  verification_runner.py
silas/execution/: README.md  __init__.py  batch.py  bridge.py  consult.py  consumers.py  docker_sandbox.py  factory.py  orchestrator.py  plan_executor.py  plan_parser.py  pool.py  python.py  python_exec.py  queue_store.py  queue_types.py  replan.py  research.py  router.py  runner.py  sandbox.py  sandbox_factory.py  shell.py  work_executor.py  worktree.py
silas/gates/: README.md  __init__.py  access.py  approval_flow.py  approval_manager.py  guardrails_provider.py  llm.py  output.py  predicates.py  runner.py  script.py  verifier.py
silas/goals/: __init__.py  manager.py
silas/memory/: README.md  __init__.py  consolidator.py  portability.py  retriever.py  sqlite_store.py
silas/models/: README.md  __init__.py  agents.py  approval.py  connections.py  context.py  context_item.py  draft.py  gates.py  (+18 more)
specs/: README.md  adrs.md  agent-loop-architecture.md  benchmarking.md  design-language.md  models.md  operations-roadmap.md  project-structure.md  protocols.md  testing.md
tests/: README.md  conftest.py  fakes.py  helpers.py  stubs.py  test_access_controller.py  test_agent_tools.py  test_agents.py  test_approval_fatigue.py  test_approval_race.py  test_approval_verifier.py  test_cli_channel.py  test_concurrent_isolation.py  test_config.py  test_connection_lifecycle.py  test_connection_skill_adapter.py  test_connections.py  test_consult_replan_wiring.py  test_context_manager.py  test_context_registry.py  test_context_scorer.py  test_docker_sandbox.py  test_e2e_execution.py  test_e2e_queue_loop.py  test_execution_layer.py  test_executor_pool.py  test_gate_providers.py  test_gate_runner.py  test_github_skill.py  test_goal_manager.py  test_goals.py  test_guardrails_provider.py  test_integration_queue.py  test_integration_stores.py  test_interaction_mode.py  test_key_manager.py  test_logging.py  test_loki_handler.py  test_manual_harness.py  test_medium_priority.py  (+57 more)
topics/: ci-failure-handler.md  daily-standup.md
web/: app.js  index.html  input.css  manifest.json  style.css  sw.js
(+126 files in other folders)
