[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silas"
version = "0.1.0"
description = "Silas runtime skeleton (Phase 1a)"
readme = "PLAN.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8",
  "pydantic-ai-slim[openrouter,logfire]>=0.0.27",
  "pydantic-settings>=2.4",
  "pyyaml>=6.0",
  "click>=8.1",
  "httpx>=0.27",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pynacl>=1.5",
  "cryptography>=43",
  "keyring>=25.2",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
  "aiosqlite>=0.22.1",
  "apscheduler>=3.11,<4",
]

[project.scripts]
silas = "silas.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["silas*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["silas", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "N", "C901"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]
